# AT_search

./: .gitignore  ATParser.cpp  ATParser.h  ATparser.cpp  ATparser_main.cpp  BookInfo.cpp  BookInfo.h  CMakeLists.txt  CreateNoramalTable.cpp  CreateNoramalizationTable.cpp  DATrie.cpp  DATrie.h  NormalTable.h  Normalization.cpp  Normalization.h  NormalizationTable.cpp  NormalizationTable.h  OpenCorporaDict.cpp  Time_test_utilities.h  utf8.cpp  utf8.h
